--- a/src/index.css
+++ b/src/index.css
@@ -26,4 +26,7 @@ a {
   cursor: pointer;
   outline: 0;
   border: 0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
