--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@
 body {
   background: #f5f5f5;
 }
+body::-webkit-scrollbar {
+  display: none;
+}
 a {
   text-decoration: none;
   color: inherit;
@@ -29,4 +32,8 @@ a {
   display: inline-flex;
   align-items: center;
   justify-content: center;
+}
+.btn.dark-btn {
+  background-color: #212ea0;
+  color: #fff;
 }
