--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -26,3 +26,47 @@ nav ul li {
   background: #212ea0;
   transition: 0.5s;
 }
+.menu-icon {
+  display: none;
+}
+
+/* Media Query */
+@media (max-width: 1000px) {
+  .logo {
+    width: 140px;
+  }
+  nav ul li {
+    margin: 10px 15px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+}
+@media (max-width: 840px) {
+  nav {
+    padding: 15px 0;
+  }
+  nav ul {
+    margin: 0;
+    position: fixed;
+    top: 0;
+    right: 0;
+    background: #212ea0;
+    z-index: -1;
+    width: 210px;
+    padding-top: 70px;
+    transition: 0.5s;
+  }
+  nav ul li {
+    display: block;
+    margin: 25px 40px;
+  }
+  .menu-icon {
+    display: block;
+    width: 30px;
+    cursor: pointer;
+    margin-right: 30px;
+  }
+  .hide-mobile-menu {
+    right: -210px;
+  }
+}
