--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,14 @@ a {
   background-color: #212ea0;
   color: #fff;
 }
+
+/* Media Query */
+@media (max-width: 1200px) {
+  .container {
+    padding-left: 1%;
+    padding-right: 1%;
+  }
+  .btn {
+    padding: 14px 22px;
+  }
+}
