Added media queries for smaller screens for multiple components

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -39,3 +39,15 @@
   color: #676767;
   margin-bottom: 15px;
 }
+
+/* Media Query */
+@media (max-width: 650px) {
+  .about {
+    flex-direction: column;
+  }
+  .about-left {
+    flex-basis: 100%;
+    margin: 20px;
+    order: 2;
+  }
+}
