Fixed Navbar display issue in Mobile View

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -50,6 +50,7 @@ nav ul li {
     position: fixed;
     top: 0;
     right: 0;
+    bottom: 0;
     background: #212ea0;
     z-index: -1;
     width: 210px;
