--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -56,3 +56,31 @@
   color: #212ea0;
   font-size: 20px;
 }
+
+/* Media Query */
+@media (max-width: 650px) {
+  .testimonials {
+    margin: 20px auto;
+    padding: 0 40px;
+    position: relative;
+  }
+  p {
+    margin-right: 10px;
+  }
+  .next-btn,
+  .back-btn {
+    width: 10px;
+  }
+  .slider ul li {
+    list-style: none;
+    width: 50%;
+    padding: 0;
+  }
+  .slide {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+    padding: 0;
+    border-radius: 10px;
+    color: #676767;
+    line-height: 1.4;
+  }
+}
